[project]
name = "todolist"
version = "0.1.0"
description = ""
authors = [
    {name = "Ngo Thuy Anh Tang", email = "s4804081@uq.edu.au"}
]
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
